fix: use tarball not collection directory

--- a/action.yaml
+++ b/action.yaml
@@ -8,10 +8,9 @@ branding:
   icon: "upload"
 
 inputs:
-  collection-path:
-    default: "."
-    description: "Path to the collection directory"
-    required: false
+  collection:
+    description: "Path to the collection"
+    required: true
   galaxy-api-key:
     description: "API key to Ansible Galaxy"
     required: true
@@ -33,9 +32,9 @@ runs:
     - name: Publish Collection
       shell: bash
       run: |
-        if [[ -f "${{ inputs.collection-path }}" ]]; then
-          ansible-galaxy collection publish --api-key "${{ inputs.galaxy-api-key }}" "${{ inputs.collection-path }}"
+        if [[ -f "${{ inputs.collection }}" ]]; then
+          ansible-galaxy collection publish --api-key "${{ inputs.galaxy-api-key }}" "${{ inputs.collection }}"
         else
-          echo "::error::Ansible collection not found at ${{ inputs.collection-path }}"
+          echo "::error::Ansible collection not found at ${{ inputs.collection }}"
           exit 1
         fi
